--- a/race1.html
+++ b/race1.html
@@ -184,7 +184,8 @@
         { duration: 10, percent: 108 },
         { duration: 30, percent: 100 },
         { duration: 120, percent: 90 },
-        { duration: 180, percent: 80 }
+        { duration: 180, percent: 80 },
+        { duration: 180, percent: 70 }
       ];
       let totalTimeMinutes = 0;
       let remainingDistance = targetDistance;
@@ -237,7 +238,8 @@
         { duration: 10, percent: 108 },
         { duration: 30, percent: 100 },
         { duration: 120, percent: 90 },
-        { duration: 180, percent: 80 }
+        { duration: 180, percent: 80 },
+        { duration: 180, percent: 70 }
       ];
       
       function adjustedPace(percent) {
