--- a/race2.html
+++ b/race2.html
@@ -119,7 +119,7 @@
       <!-- 1. ผลการแข่งขันที่เคยทำได้ -->
       <div class="form-group">
         <label for="achievedDistance">ผลการแข่งขันที่ทำได้ (ระยะทาง กม.)</label>
-        <input type="number" id="achievedDistance" name="achievedDistance" step="any" placeholder="เช่น 10" required>
+        <input type="number" id="achievedDistance" name="achievedDistance" step="any" placeholder="เช่น 5 - 42.195" required>
       </div>
       <div class="form-group">
         <label>เวลา (ที่ทำได้) <small>(ชั่วโมง, นาที, วินาที)</small></label>
