--- a/race2.html
+++ b/race2.html
@@ -323,7 +323,83 @@
       <td>≤100 นาที</td>
       <td>-</td>
     </tr>
-    <!-- (ย่อตรงนี้ได้เลยนะ ถ้าอยาก copy ทั้งหมดบอกได้เดี๋ยวจัดให้เต็ม) -->
+    <tr>
+      <td>70%</td>
+      <td>Base Endurance</td>
+      <td>45–120 นาที</td>
+      <td>≤150 นาที</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>75%</td>
+      <td>Base Endurance (AB)</td>
+      <td>60–120 นาที</td>
+      <td>≤150 นาที</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>80%</td>
+      <td>Aerobic Threshold (AT)</td>
+      <td>45–90 นาที</td>
+      <td>≤100 นาที</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>85%</td>
+      <td>Marathon Pace / Tempo</td>
+      <td>40–70 นาที</td>
+      <td>≤80 นาที</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>90%</td>
+      <td>Tempo Run / Cruise Intervals</td>
+      <td>30–50 นาที</td>
+      <td>≤60 นาที</td>
+      <td>4–6 เที่ยว (6–10 นาที/เที่ยว)</td>
+    </tr>
+    <tr>
+      <td>95%</td>
+      <td>Threshold Run</td>
+      <td>20–40 นาที</td>
+      <td>≤45 นาที</td>
+      <td>3–5 เที่ยว (6–8 นาที/เที่ยว)</td>
+    </tr>
+    <tr>
+      <td>100%</td>
+      <td>Threshold Intervals</td>
+      <td>15–30 นาที</td>
+      <td>≤35 นาที</td>
+      <td>3–4 เที่ยว (5–7 นาที/เที่ยว)</td>
+    </tr>
+    <tr>
+      <td>105%</td>
+      <td>VO2 Max Intervals</td>
+      <td>12–20 นาที</td>
+      <td>≤25 นาที</td>
+      <td>4–6 เที่ยว (800m หรือ 3–4 นาที)</td>
+    </tr>
+    <tr>
+      <td>110%</td>
+      <td>VO2 Max Intervals</td>
+      <td>8–15 นาที</td>
+      <td>≤20 นาที</td>
+      <td>5–6 เที่ยว (600m หรือ 2.5–3 นาที)</td>
+    </tr>
+    <tr>
+      <td>115%</td>
+      <td>Speed Intervals</td>
+      <td>6–10 นาที</td>
+      <td>≤15 นาที</td>
+      <td>6–8 เที่ยว (400m หรือ 90s)</td>
+    </tr>
+    <tr>
+      <td>120%</td>
+      <td>Anaerobic Power</td>
+      <td>4–8 นาที</td>
+      <td>≤10 นาที</td>
+      <td>6–10 เที่ยว (200–300m หรือ 45s–60s)</td>
+    </tr>
     <tr>
       <td>125%</td>
       <td>Sprint Repeats</td>
@@ -333,6 +409,7 @@
     </tr>
   </tbody>
 </table>
+
 `;
 
 
