--- a/race2.html
+++ b/race2.html
@@ -325,14 +325,14 @@
     </tr>
     <tr>
       <td>70%</td>
-      <td>Base Endurance</td>
+      <td>Aerobic Base (AB</td>
       <td>45–120 นาที</td>
       <td>≤150 นาที</td>
       <td>-</td>
     </tr>
     <tr>
       <td>75%</td>
-      <td>Base Endurance (AB)</td>
+      <td>Aerobic Base (AB)</td>
       <td>60–120 นาที</td>
       <td>≤150 นาที</td>
       <td>-</td>
@@ -346,28 +346,28 @@
     </tr>
     <tr>
       <td>85%</td>
-      <td>Marathon Pace / Tempo</td>
+      <td>Marathon Pace / Aerobic Threshold (AT)</td>
       <td>40–70 นาที</td>
       <td>≤80 นาที</td>
       <td>-</td>
     </tr>
     <tr>
       <td>90%</td>
-      <td>Tempo Run / Cruise Intervals</td>
+      <td>Marathon Pace / Tempo Run/Intervals</td>
       <td>30–50 นาที</td>
       <td>≤60 นาที</td>
       <td>4–6 เที่ยว (6–10 นาที/เที่ยว)</td>
     </tr>
     <tr>
       <td>95%</td>
-      <td>Threshold Run</td>
+      <td>Threshold Run/Intervals</td>
       <td>20–40 นาที</td>
       <td>≤45 นาที</td>
       <td>3–5 เที่ยว (6–8 นาที/เที่ยว)</td>
     </tr>
     <tr>
       <td>100%</td>
-      <td>Threshold Intervals</td>
+      <td>Threshold Run/Intervals</td>
       <td>15–30 นาที</td>
       <td>≤35 นาที</td>
       <td>3–4 เที่ยว (5–7 นาที/เที่ยว)</td>
