--- a/race2.html
+++ b/race2.html
@@ -303,109 +303,74 @@
     <tr>
       <th>%LT</th>
       <th>เหมาะสำหรับการฝึก</th>
-      <th>เวลาที่มีประสิทธิภาพ</th>
+      <th>เวลาที่มีประสิทธิภาพ(วิ่งต่อเนื่อง)</th>
       <th>ไม่ควรเกิน</th>
       <th>จำนวนเที่ยว (ถ้าเป็น Intervals)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>60%</td>
-      <td>Recovery / Cool-down</td>
-      <td>30–60 นาที</td>
-      <td>≤75 นาที</td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>65%</td>
-      <td>Active Recovery</td>
+      <td>60-70%</td>
+      <td>Active Recovery (AR) / Cool-down (CD)</td>
       <td>30–90 นาที</td>
       <td>≤100 นาที</td>
       <td>-</td>
     </tr>
     <tr>
-      <td>70%</td>
-      <td>Aerobic Base (AB</td>
-      <td>45–120 นาที</td>
-      <td>≤150 นาที</td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>75%</td>
+      <td>70-80%</td>
       <td>Aerobic Base (AB)</td>
       <td>60–120 นาที</td>
-      <td>≤150 นาที</td>
+      <td>≤180 นาที</td>
       <td>-</td>
     </tr>
     <tr>
-      <td>80%</td>
+      <td>80-85%</td>
       <td>Aerobic Threshold (AT)</td>
       <td>45–90 นาที</td>
-      <td>≤100 นาที</td>
+      <td>≤120 นาที</td>
       <td>-</td>
     </tr>
     <tr>
-      <td>85%</td>
-      <td>Marathon Pace / Aerobic Threshold (AT)</td>
+      <td>85-90%</td>
+      <td>Marathon Pace (MP)</td>
       <td>40–70 นาที</td>
       <td>≤80 นาที</td>
       <td>-</td>
     </tr>
     <tr>
-      <td>90%</td>
-      <td>Marathon Pace / Tempo Run/Intervals</td>
+      <td>90-95%</td>
+      <td>Marathon Pace (MP) / Tempo Run</td>
       <td>30–50 นาที</td>
       <td>≤60 นาที</td>
-      <td>4–6 เที่ยว (6–10 นาที/เที่ยว)</td>
+      <td>-</td>
     </tr>
     <tr>
-      <td>95%</td>
-      <td>Threshold Run/Intervals</td>
-      <td>20–40 นาที</td>
+      <td>95-105%</td>
+      <td>Threshold Run (TH)/Intervals</td>
+      <td>20–35 นาที</td>
       <td>≤45 นาที</td>
-      <td>3–5 เที่ยว (6–8 นาที/เที่ยว)</td>
+      <td>3–5 เที่ยว (6–10 นาที/เที่ยว)</td>
     </tr>
     <tr>
-      <td>100%</td>
-      <td>Threshold Run/Intervals</td>
-      <td>15–30 นาที</td>
-      <td>≤35 นาที</td>
-      <td>3–4 เที่ยว (5–7 นาที/เที่ยว)</td>
-    </tr>
-    <tr>
-      <td>105%</td>
-      <td>VO2 Max Intervals</td>
-      <td>12–20 นาที</td>
+      <td>105-115%</td>
+      <td>VO2 Max Intervals (VM)</td>
+      <td>-</td>
       <td>≤25 นาที</td>
-      <td>4–6 เที่ยว (800m หรือ 3–4 นาที)</td>
+      <td>4–6 เที่ยว (600-1000m หรือ 3–4 นาที)</td>
     </tr>
     <tr>
-      <td>110%</td>
-      <td>VO2 Max Intervals</td>
-      <td>8–15 นาที</td>
-      <td>≤20 นาที</td>
-      <td>5–6 เที่ยว (600m หรือ 2.5–3 นาที)</td>
-    </tr>
-    <tr>
-      <td>115%</td>
+      <td>115-120%</td>
       <td>Speed Intervals</td>
-      <td>6–10 นาที</td>
+      <td>-</td>
       <td>≤15 นาที</td>
       <td>6–8 เที่ยว (400m หรือ 90s)</td>
     </tr>
     <tr>
-      <td>120%</td>
-      <td>Anaerobic Power</td>
-      <td>4–8 นาที</td>
-      <td>≤10 นาที</td>
-      <td>6–10 เที่ยว (200–300m หรือ 45s–60s)</td>
-    </tr>
-    <tr>
       <td>125%</td>
-      <td>Sprint Repeats</td>
-      <td>3–6 นาที</td>
-      <td>≤8 นาที</td>
-      <td>6–12 เที่ยว (100–200m หรือ 20–45s)</td>
+      <td>Sprint Repeats (SP)</td>
+      <td>-</td>
+      <td>≤4 นาที</td>
+      <td>6–12 เที่ยว (50–200m หรือ 10–30s)</td>
     </tr>
   </tbody>
 </table>
