--- a/race2.html
+++ b/race2.html
@@ -268,8 +268,9 @@
       // ผลลัพธ์สำหรับระยะมาตรฐาน
       const standardDistances = [
         { label: "5K", distance: 5 },
+        { label: "8M", distance: 8.04672 },
         { label: "10K", distance: 10 },
-        { label: "16K", distance: 16 },
+        { label: "10M", distance: 16.09344 },
         { label: "Half Marathon", distance: 21.0975 },
         { label: "33K", distance: 33 },
         { label: "Marathon", distance: 42.195 }
