--- a/pace1.html
+++ b/pace1.html
@@ -208,7 +208,7 @@
                 return;
             }
 
-            const percentages = [70, 75, 80, 85, 90, 95, 97, 100, 105, 110, 115, 120, 125];
+            const percentages = [55, 60, 65, 70, 75, 80, 85, 90, 95, 97, 100, 105, 110, 115, 120, 125];
             let resultHTML = '';
 
             percentages.forEach(percent => {
