--- a/training1.html
+++ b/training1.html
@@ -137,7 +137,7 @@
       
       <div class="form-group">
         <label for="achievedDistance">ผลการแข่งขันที่ทำได้ (ระยะทาง กม.)</label>
-        <input type="number" id="achievedDistance" name="achievedDistance" step="any" placeholder="เช่น 10 หรือ 21.1" required>
+        <input type="number" id="achievedDistance" name="achievedDistance" step="any" placeholder="เช่น ตั้งแต่ 5 กม. - 42.2 กม." required>
       </div>
       <div class="form-group">
         <label>เวลา (ที่ทำได้) <small>(ชั่วโมง, นาที, วินาที)</small></label>
