--- a/time1.html
+++ b/time1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pace Calculator</title>
     <style>
         body {
@@ -35,6 +35,10 @@
             background-color: #e9f7e9;
         }
 
+        .accumulated {
+            background-color: #fef7e0;
+        }
+
         .summary {
             font-weight: bold;
             background-color: #d9edf7;
@@ -46,91 +50,113 @@
 <div id="menu-container"></div>
 <script src="menu.js"></script>
     
-    <h1>Pace and Time Calculator</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Distance (km)</th>
-                <th>Pace (Minutes)</th>
-                <th>Pace (Seconds)</th>
-                <th>Time (Minutes:Seconds)</th>
-            </tr>
-        </thead>
-        <tbody id="calculatorTable">
-            <tr>
-                <td><input type="number" class="distance" step="0.1" oninput="calculateRow(this)"></td>
-                <td><input type="number" class="pace-minutes" oninput="calculateRow(this)"></td>
-                <td><input type="number" class="pace-seconds" oninput="calculateRow(this)"></td>
-                <td class="result">0:00</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr class="summary">
-                <td id="totalDistance">0</td>
-                <td colspan="2">Average Pace: <span id="averagePace">0:00</span></td>
-                <td id="totalTime">0:00:00</td>
-            </tr>
-        </tfoot>
-    </table>
-    <button onclick="addRow()">Add Row</button>
+<h1>Pace and Time Calculator</h1>
+<table>
+    <thead>
+        <tr>
+            <th>Distance (km)</th>
+            <th>Pace (Minutes)</th>
+            <th>Pace (Seconds)</th>
+            <th>Time (Minutes:Seconds)</th>
+            <th>Accumulated Time</th> <!-- เพิ่มคอลัมน์นี้ -->
+        </tr>
+    </thead>
+    <tbody id="calculatorTable">
+        <tr>
+            <td><input type="number" class="distance" step="0.1" oninput="calculateRow(this)"></td>
+            <td><input type="number" class="pace-minutes" oninput="calculateRow(this)"></td>
+            <td><input type="number" class="pace-seconds" oninput="calculateRow(this)"></td>
+            <td class="result">0:00</td>
+            <td class="accumulated">0:00</td> <!-- ช่องเวลาสะสม -->
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr class="summary">
+            <td id="totalDistance">0</td>
+            <td colspan="2">Average Pace: <span id="averagePace">0:00</span></td>
+            <td id="totalTime">0:00:00</td>
+            <td></td> <!-- เวลาสะสมที่ footer ไม่ต้องแสดง -->
+        </tr>
+    </tfoot>
+</table>
+<button onclick="addRow()">Add Row</button>
 
-    <script>
-        function addRow() {
-            const table = document.getElementById('calculatorTable');
-            const newRow = document.createElement('tr');
+<script>
+    function addRow() {
+        const table = document.getElementById('calculatorTable');
+        const newRow = document.createElement('tr');
 
-            newRow.innerHTML = `
-                <td><input type="number" class="distance" step="0.1" oninput="calculateRow(this)"></td>
-                <td><input type="number" class="pace-minutes" oninput="calculateRow(this)"></td>
-                <td><input type="number" class="pace-seconds" oninput="calculateRow(this)"></td>
-                <td class="result">0:00</td>
-            `;
+        newRow.innerHTML = `
+            <td><input type="number" class="distance" step="0.1" oninput="calculateRow(this)"></td>
+            <td><input type="number" class="pace-minutes" oninput="calculateRow(this)"></td>
+            <td><input type="number" class="pace-seconds" oninput="calculateRow(this)"></td>
+            <td class="result">0:00</td>
+            <td class="accumulated">0:00</td>
+        `;
 
-            table.appendChild(newRow);
-        }
+        table.appendChild(newRow);
+    }
 
-        function calculateRow(inputElement) {
-            const row = inputElement.closest('tr');
+    function calculateRow(inputElement) {
+        const row = inputElement.closest('tr');
+        const distance = parseFloat(row.querySelector('.distance').value) || 0;
+        const paceMinutes = parseInt(row.querySelector('.pace-minutes').value) || 0;
+        const paceSeconds = parseInt(row.querySelector('.pace-seconds').value) || 0;
+
+        const totalPaceSeconds = (paceMinutes * 60) + paceSeconds;
+        const totalSeconds = distance * totalPaceSeconds;
+        const minutes = Math.floor(totalSeconds / 60);
+        const seconds = Math.round(totalSeconds % 60);
+
+        row.querySelector('.result').textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
+
+        calculateSummary();
+        updateAccumulatedTimes();
+    }
+
+    function calculateSummary() {
+        const rows = document.querySelectorAll('#calculatorTable tr');
+        let totalDistance = 0;
+        let totalTimeInSeconds = 0;
+
+        rows.forEach(row => {
             const distance = parseFloat(row.querySelector('.distance').value) || 0;
-            const paceMinutes = parseInt(row.querySelector('.pace-minutes').value) || 0;
-            const paceSeconds = parseInt(row.querySelector('.pace-seconds').value) || 0;
+            const result = row.querySelector('.result').textContent.split(':');
+            const timeInSeconds = (parseInt(result[0]) * 60) + parseInt(result[1]);
 
-            const totalPaceSeconds = (paceMinutes * 60) + paceSeconds;
-            const totalSeconds = distance * totalPaceSeconds;
-            const minutes = Math.floor(totalSeconds / 60);
-            const seconds = Math.round(totalSeconds % 60);
+            totalDistance += distance;
+            totalTimeInSeconds += timeInSeconds;
+        });
 
-            row.querySelector('.result').textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
+        const totalHours = Math.floor(totalTimeInSeconds / 3600);
+        const totalMinutes = Math.floor((totalTimeInSeconds % 3600) / 60);
+        const totalSeconds = totalTimeInSeconds % 60;
 
-            calculateSummary();
-        }
+        const averagePaceInSeconds = totalDistance > 0 ? Math.ceil(totalTimeInSeconds / totalDistance) : 0;
+        const averagePaceMinutes = Math.floor(averagePaceInSeconds / 60);
+        const averagePaceSeconds = averagePaceInSeconds % 60;
 
-        function calculateSummary() {
-            const rows = document.querySelectorAll('#calculatorTable tr');
-            let totalDistance = 0;
-            let totalTimeInSeconds = 0;
+        document.getElementById('totalDistance').textContent = totalDistance.toFixed(2);
+        document.getElementById('totalTime').textContent = `${totalHours}:${totalMinutes.toString().padStart(2, '0')}:${totalSeconds.toString().padStart(2, '0')}`;
+        document.getElementById('averagePace').textContent = `${averagePaceMinutes}:${averagePaceSeconds.toString().padStart(2, '0')}`;
+    }
 
-            rows.forEach(row => {
-                const distance = parseFloat(row.querySelector('.distance').value) || 0;
-                const result = row.querySelector('.result').textContent.split(':');
-                const timeInSeconds = (parseInt(result[0]) * 60) + parseInt(result[1]);
+    function updateAccumulatedTimes() {
+        const rows = document.querySelectorAll('#calculatorTable tr');
+        let accumulatedSeconds = 0;
 
-                totalDistance += distance;
-                totalTimeInSeconds += timeInSeconds;
-            });
+        rows.forEach(row => {
+            const result = row.querySelector('.result').textContent.split(':');
+            const timeInSeconds = (parseInt(result[0]) * 60) + parseInt(result[1]);
+            accumulatedSeconds += timeInSeconds;
 
-            const totalHours = Math.floor(totalTimeInSeconds / 3600);
-            const totalMinutes = Math.floor((totalTimeInSeconds % 3600) / 60);
-            const totalSeconds = totalTimeInSeconds % 60;
+            // แปลงเวลาสะสมเป็น mm:ss
+            const accMinutes = Math.floor(accumulatedSeconds / 60);
+            const accSeconds = accumulatedSeconds % 60;
 
-            const averagePaceInSeconds = totalDistance > 0 ? Math.ceil(totalTimeInSeconds / totalDistance) : 0;
-            const averagePaceMinutes = Math.floor(averagePaceInSeconds / 60);
-            const averagePaceSeconds = averagePaceInSeconds % 60;
-
-            document.getElementById('totalDistance').textContent = totalDistance.toFixed(2);
-            document.getElementById('totalTime').textContent = `${totalHours}:${totalMinutes.toString().padStart(2, '0')}:${totalSeconds.toString().padStart(2, '0')}`;
-            document.getElementById('averagePace').textContent = `${averagePaceMinutes}:${averagePaceSeconds.toString().padStart(2, '0')}`;
-        }
-    </script>
+            row.querySelector('.accumulated').textContent = `${accMinutes}:${accSeconds.toString().padStart(2, '0')}`;
+        });
+    }
+</script>
 </body>
 </html>
